--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "mongoose": "^5.11.8"
+    "bcrypt": "^5.0.0"
   },
   "devDependencies": {},
   "scripts": {
